test_data/typeerror/salt-52624.py
if '%' in self.opts['batch']:
    res = partition(float(self.opts['batch'].strip('%')))